// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render <Footer/> 1`] = `
<DocumentFragment>
  <footer
    class="af-footer"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          src="logo-axa.svg"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2022 AXA Tous droits réservés - v0.5.1
      </div>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Render <Footer/> fullscreen 1`] = `
<DocumentFragment>
  <footer
    class="af-footer af-footer--fullscreen"
  >
    <div
      class="container-fluid container"
    >
      <a
        class="af-logo"
        href="https://www.axa.fr/"
        target="blank"
        title="Site Axa"
      >
        <img
          alt="Logo Axa"
          class="af-logo__brand"
          src="logo-axa.svg"
        />
      </a>
      <div
        class="af-footer-content"
      >
        © 2022 AXA Tous droits réservés - v0.5.1
      </div>
    </div>
  </footer>
</DocumentFragment>
`;
